Add multiple boards

--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <html>
-	<head>
-		<script type="text/javascript" src="annotations.js"></script>
-		<script type="text/javascript" src="main.js"></script>
-		<link href="style.css" rel="stylesheet">
-	</head>
 	<body>
-		<div class="image">
-			<canvas id="canvas"></canvas>
-		</div>
-		<div class="panel">
-			<button type="button" class="controls" id="download">Download</button>
-			<button type="button" class="controls" id="random">Random</button>
-			<button type="button" class="controls" id="clear">Clear</button>
-		</div>
+		<h4>Boards of Earth</h4>
+		<ul style="list-style-type:none">
+			<li><a href="mile-end">Mile End</a></li>
+			<li><a href="arch-north">Arch North</a></li>
+			<li><a href="gajland">Gajland</a></li>
+		</ul>
 	</body>
 </html>
