Use anchors to save problems

--- a/arch-north/index.html
+++ b/arch-north/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
-		<script type="text/javascript" src="arch-north.js"></script>
+		<script type="text/javascript" src="arch-north-2017-04-04.js"></script>
 		<script type="text/javascript" src="../main.js"></script>
+		<script type="text/javascript" src="../xhr.js"></script>
 		<link href="../style.css" rel="stylesheet">
 	</head>
 	<body>
