--- a/gajland/index.html
+++ b/gajland/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
-		<script type="text/javascript" src="gajland.js"></script>
+		<script type="text/javascript" src="gajland-2017-01-08.js"></script>
 		<script type="text/javascript" src="../main.js"></script>
+		<script type="text/javascript" src="../xhr.js"></script>
 		<link href="../style.css" rel="stylesheet">
 	</head>
 	<body>
