--- a/mile-end/index.html
+++ b/mile-end/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<script type="text/javascript" src="mile-end.js"></script>
+		<script type="text/javascript" src="../xhr.js"></script>
+		<script type="text/javascript" src="mile-end-2017-04-05.js"></script>
 		<script type="text/javascript" src="../main.js"></script>
 		<link href="../style.css" rel="stylesheet">
 	</head>
