Make links permanent

--- a/arch-north-2017-04-04.html
+++ b/arch-north-2017-04-04.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="../xhr.js"></script>
-		<script type="text/javascript" src="mile-end-2017-04-05.js"></script>
-		<script type="text/javascript" src="../main.js"></script>
-		<link href="../style.css" rel="stylesheet">
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="arch-north-2017-04-04.js"></script>
+		<script type="text/javascript" src="main.js"></script>
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="image">
