--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
 <html>
+	<head>
+		<link href="style.css" rel="stylesheet">
+	</head>
 	<body>
 		<h4>Boards of Earth</h4>
-		<ul style="list-style-type:none">
-			<li><a href="mile-end">Mile End</a></li>
-			<li><a href="arch-north">Arch North</a></li>
-			<li><a href="gajland">Gajland</a></li>
+		<ul id="centres">
+			<li><a href="mile-end-2017-04-05.html">Mile End</a></li>
+			<li><a href="arch-north-2017-04-04.html">Arch North</a></li>
+			<li><a href="gajland-2017-01-08.html">Gajland</a></li>
 		</ul>
 	</body>
 </html>
