--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			<li><a href="arch-north-2017-04-04.html">Arch North</a></li>
 			<li><a href="gajland-2017-01-08.html">Gajland</a></li>
 			<li><a href="mile-end-2017-04-05.html">Mile End</a></li>
+			<li><a href="stronghold-2017-04-07.html">Stronghold</a></li>
 			<li><a href="the-castle-2017-05-24.html">The Castle</a></li>
 		</ul>
 	</body>
