Use ES6 modules

--- a/arch-biscuit-2017-04-25.html
+++ b/arch-biscuit-2017-04-25.html
@@ -3,8 +3,7 @@
 	<head>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script type="text/javascript" src="arch-biscuit-2017-04-25.js"></script>
-		<script type="text/javascript" src="boxes.js"></script>
-		<script type="text/javascript" src="main.js"></script>
+		<script type="module" src="main.js"></script>
 		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
