--- a/arch-north-2017-04-04.html
+++ b/arch-north-2017-04-04.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="image">
-			<canvas id="canvas"></canvas>
+			<canvas class="canvas"></canvas>
 		</div>
 		<div class="panel">
 			<ul>
