--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-		<h4>Boards of Earth</h4>
-		<ul id="centres">
+		<h1>Boards of Earth</h1>
+		<ul class="boards">
 			<li><a href="arch-north-2018-03-25.html">Arch North</a></li>
 			<li><a href="gajland-2024-09-15.html">Gajland</a></li>
 			<li><a href="harrowall-30-2018-03-25.html">Harrowall 30</a></li>
