--- a/gajland-2024-09-15.html
+++ b/gajland-2024-09-15.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="image">
-			<canvas id="canvas"></canvas>
+			<canvas class="canvas"></canvas>
 		</div>
 		<div class="panel">
 			<ul>
